# easy_storage

./: Cargo.toml
src/: lib.rs
