[package]
name = "easy_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
lazy_static = "1.4"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-cookies = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.44", features = ["Storage"]}
